@@ -1715,9 +1715,17 @@ mb_window_manager_init (MBWMObject *this, va_list vap)
 
   mb_wm_keys_init(wm);
 
-#ifdef HAVE_XFIXES
-  XFixesHideCursor (wm->xdpy, wm->root_win->xwindow);
-#endif
+  /* set the cursor invisible */
+  {
+    Pixmap pix = XCreatePixmap (wm->xdpy, wm->root_win->xwindow, 1, 1, 1);
+    XColor col;
+    Cursor blank_curs;
+
+    memset (&col, 0, sizeof (col));
+    blank_curs = XCreatePixmapCursor (wm->xdpy, pix, pix, &col, &col, 1, 1);
+    XFreePixmap (wm->xdpy, pix);
+    XDefineCursor(wm->xdpy, wm->root_win->xwindow, blank_curs);
+  }
 
   return 1;
 }
