@@ -1,6 +1,6 @@
 matchbox-window-manager-2 (0.2.30-1~unreleased) unstable; urgency=low
 
-  * writeme
+  * Fixes: NB#109073 - Unable to show mouse pointer.
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Fri,  3 Apr 2009 13:05:57 +0300
 
